# pdfMind

./: .env.example  .gitignore  README.md  docker-compose.yml  fix_rag_notebook.py  pyproject.toml  rag.ipynb  rag.py  translate_notebook.py
backend/: Dockerfile  README.md  pyproject.toml
backend/src/: build_rag.py  config.py  data_processing.py  fast_api.py
chroma_db/: chroma.sqlite3
data/: Nomenclature-Qualibat-janv-2024.pdf:mshield  sample.txt
data/tests/: eval_rag.csv  samples.csv
frontend/: Dockerfile  README.md  app.js  index.html  next.config.ts  package-lock.json  package.json  style.css
frontend/src/app/: globals.css  page.tsx
frontend/src/app/test-hover/: page.tsx
frontend/src/components/: ChatPanel.tsx  MarkdownRenderer.tsx  PDFViewer.tsx  Typewriter.tsx
notebook/: rag.ipynb
src/: app.py  rag.py
src/data/: chunk_data.py  db.py  embedding.py  load_data.py
src/model/: get_model.py
src/pdf_mind/: build_rag.py  config.py  fast_api.py
