[project]
name = "pdfmind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "langchain>=1.2.4",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.0",
    "langchain-ollama>=0.2.0",
    "chromadb>=0.5.0",
    "langchain-chroma>=1.1.0",
    "gradio>=4.0.0",
    "pdfminer.six",
    "pymupdf",
    "notebook>=7.5.2",
    "openevals>=0.1.3",
    "fastapi[standard]>=0.109.0",
    "uvicorn>=0.27.0",
    "aiofiles>=24.1.0",
]
